--- a/css/common.css
+++ b/css/common.css
@@ -23,8 +23,8 @@ button {
   cursor: pointer;
 }
 
-.gallery {
-  display:flex;
+.gallery_flex {
+  display: flex;
   justify-content: space-around;
-
+  list-style: none;
 }
